fixed overflow problem in body

--- a/style.css
+++ b/style.css
@@ -4,20 +4,24 @@
     box-sizing: border-box;
     font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
     color: rgb(246, 241, 196);
+    scroll-behavior: smooth;
 }
 
 body {
     min-height: 100vh;
+    width: 100%;
     margin: 0;
     display: grid;
     grid-template-rows: 1fr 500px 600px 500px;
     background-color: rgb(0, 7, 3);
+    overflow-x: hidden; 
 }
 
 
 
 .main-page {
     display: grid;
+    position:relative;
 }
 
 .Main-page__bg-video {
@@ -243,6 +247,6 @@ display: block;
 }
 
 .social-media-icons{
-    width: 40px;
+    width: 50px;
     padding:10px;
 }
